# otus_print_ip

./: .gitignore  CMakeLists.txt  Doxyfile  DoxygenLayout.xml  README.md  README_8md.html  annotated.html  classes.html  doxygen_crawl.html  files.html  functions.html  functions_func.html  functions_type.html  functions_vars.html  globals.html  globals_defs.html  globals_func.html  graph_legend.html  index.html  main.cpp  main_8cpp.html  main_8cpp__incl.map  main_8cpp__incl.md5  md_README.html  menudata.js  mydbgtrace.h  mydbgtrace_8h.html  mydbgtrace_8h__dep__incl.map  mydbgtrace_8h__dep__incl.md5  mydbgtrace_8h__incl.map  mydbgtrace_8h__incl.md5  mydbgtrace_8h_source.html  myprintip.h  myprintip_8h.html  myprintip_8h__dep__incl.map  myprintip_8h__dep__incl.md5  myprintip_8h__incl.map  myprintip_8h__incl.md5  myprintip_8h_source.html  mysfinae.h  (+68 more)
.github/workflows/: documentation.yml  release.yml
search/: all_3.js  all_4.js  all_5.js  all_6.js  all_8.js  all_9.js  classes_0.js  defines_0.js  defines_2.js  files_0.js  files_1.js  files_3.js  files_4.js  functions_1.js  functions_2.js  functions_3.js  functions_4.js  functions_5.js  namespaces_0.js  pages_0.js  searchdata.js  typedefs_0.js  typedefs_1.js  variables_0.js
